syntax = "proto3";

option csharp_namespace = "GrpcFileServer";

package greet;

service FileService {
	rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
	rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
}

message FileMetadata {
	string name=1;
	int32 length = 2;
	string checksum = 3;
}

message UploadFileRequest {
	FileMetadata metadata=1;
	bytes data = 2;
}

message UploadFileResponse {
	string fileId = 1;
}

message DownloadFileRequest {
	string fileId = 1;
}

message DownloadFileResponse {
	FileMetadata metadata=1;
	bytes data = 2;
}

