syntax = "proto3";

option csharp_namespace = "LoggerServer";

package logging;

service Logging {
  rpc SendContent (SendContentRequest) returns (SendContentReply);
}


message SendContentRequest {
  string clientName = 1;
  string fileName = 2;
  string content = 3;
}

message SendContentReply {
  string message = 1;
}
